--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,19 @@
             display: flex;
             flex-direction: column;
         }
+        .response-text{
+            font-size: 28px;
+            color: #555;
+            margin-top: 10px;
+            line-height: 1.2;
+        }
+        .decoration {
+            position: absolute;
+            font-size: 40px;
+            pointer-events: none;
+        }
+        .flower-1 { bottom: 15px; right: 15px; color: #ff99bb; }
+        .flower-2 { top: 10px; right: 10px; color: #cce0ff; font-size: 20px; }
     </style>
 </head>
 
