--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             height: 100vh;
             margin: 0;
             font-family: 'VT323', monospace;
-            overflow: hidden;
+            overflow: scroll;
         }
 
         .app-container {
