added little qol -> key listener, fixed catFacts response so it no longer returns undefined+text

--- a/public/index.html
+++ b/public/index.html
@@ -185,6 +185,10 @@
         button.disabled = true
         button.innerText = "Type something c:"
 
+        input.addEventListener("keydown", (e)=>{
+            if(e.key === 'Enter') sendMessage()
+        })
+
         input.addEventListener('input', () => {
             if (input.value.trim().length < 1) {
                 button.disabled = true
